// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons renders children 1`] = `
<div
  className="buttons"
>
   
  <div
    className="child"
  >
    Child Div
  </div>
   
</div>
`;

exports[`Buttons renders empty buttons 1`] = `
<div
  className="buttons"
/>
`;
